Migrate the mod integrations and get the build green
Wave 6. The seven integration/modules files move to the AEKey model, the JEI
dependency becomes HadEnoughItems 4.32.0, and src/main compiles for the first
time since wave 0.

The storage monitor and crafting monitor providers lose their item-vs-fluid
branch entirely - every key type answers getDisplayName() for itself, so the
old "TODO: generalize" is simply done. The JEI helpers keep the Missing and
Craftable tooltips and the middle-click autocraft; they read the terminal's
client-side listing through the new ItemRepo.getAllEntries(), because the
public ContainerMEMonitorable.items field they used no longer exists.

AvailableItems replaces the IItemList those two shared. KeyCounter cannot
stand in for it: it stores no craftable flag, and it treats an amount of zero
as absence, while a zero-amount craftable entry is exactly what paints an
ingredient slot blue instead of red.

The rest is what the first real compile exposed in waves 1-5 - 26 errors that
no scan could have caught: a moved ICellWorkbenchItem, the removed
registries().cell(), List.of and Object2LongMaps.fastIterable used against a
Java 8 classpath and an older fastutil, getCache() inferring IGridCache with
no assignment target, a setStackSize call left on an AEKey, and one more
setTargetStack(GenericStack) of the kind wave 5 already fixed twice.