@@ -19,6 +19,7 @@
 package appeng.parts.automation;
 
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -68,7 +69,7 @@ public class PartIdentityAnnihilationPlane extends PartAnnihilationPlane {
     @Override
     protected List<PickupStrategy> createPickupStrategies(World world, BlockPos fromPos, EnumFacing fromSide,
             TileEntity host, Map<Enchantment, Integer> enchantments, @Nullable UUID owner) {
-        return List.of(new IdentityItemPickupStrategy(world, fromPos, fromSide, host, enchantments, owner));
+        return Collections.singletonList(new IdentityItemPickupStrategy(world, fromPos, fromSide, host, enchantments, owner));
     }
 
     @Override
